syntax = "proto3";

package notificationpb;

enum EmailStatus {
    STATUS_PENDING = 0;
    STATUS_SENT = 1;
    STATUS_FAILED = 2;
}

enum NotificationType {
    NOTIFICATION_TYPE_EMAIL = 0;
    NOTIFICATION_TYPE_SMS = 1;
    NOTIFICATION_TYPE_PUSH = 2;
    NOTIFICATION_TYPE_UNKNOWN = 3;
}

message Notification {
    string id = 1;
    string subject = 2;
    string content = 3;
    string sender_name = 4;
    string sender = 5;
    string recipient = 6;
    string recipient_name = 7;
    EmailStatus status = 8;
    NotificationType type = 9;
}
